src/sql/workbench/contrib/dashboard/browser/contents/dashboardWidgetWrapper.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Microsoft Corporation. All rights reserved.
 *  Licensed under the Source EULA. See License.txt in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

dashboard-widget-wrapper .action-label {
	padding: 7px;
}

dashboard-widget-wrapper .widgetWrapper {
	display: flex;
	flex-flow: column;
	overflow: hidden;
	height: 100%;
	width: 100%;
}

dashboard-widget-wrapper .widgetHeader {
	display: flex;
	flex: 0 0;
	padding: 3px 0 3px 0;
	font-weight: 600;
	font-size: 14px;
	line-height: 20px;
}

dashboard-widget-wrapper .icon {
	display: inline-block;
	padding: 10px;
	margin-left: 5px;
}

dashboard-widget-wrapper .widgetTitle {
	margin-left: 5px;
	flex: 1 1;
}

dashboard-widget-wrapper .noTitle {
	flex:1 1;
}

dashboard-widget-wrapper .actionbar {
	flex: 0 0 auto;
	align-self: end;
}

dashboard-widget-wrapper .bottomActionbar {
	flex: 0 0 auto;
	align-self: center;
	margin-top: -28px;
}

